<resources>
    <string name="app_name">Moon</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_order_from_top_supermarkets">Ready to order from top supermarkets?</string>
    <string name="set_delivery_location">SET DELIVERY LOCATION</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LogIn</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="we_ll_send_you_an_sms_to_verify_your_number">We\'ll send you an sms to verify your number</string>
    <string name="delivered_quickly_to_your_doorstep">Delivered quickly to your doorstep</string>
    <string name="order_from_a_variety_of_stores">Order from a variety of stores</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to:</string>
    <string name="resend">Resend OTP</string>
    <string name="validate">Validate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="title_moon">Moon</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="did_not_receive_the_code_resend_otp">Did not receive the code? Resend OTP</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="restaurants">Restaurants</string>
    <string name="see_your_order_coming_your_lightning_fast">See your order coming your lightning fast!</string>
    <string name="supermakets">Supermakets</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="bakeries">Bakeries</string>
    <string name="boutiques">Boutiques</string>
    <string name="others">Others..</string>
    <string name="laiteries">Laitieres</string>
    <string name="what_would_you_like_today">What would you like today?</string>
    <string name="medicine">Medicine</string>
    <string name="notice">Notice</string>
    <string name="cart_has_items">There are items in the cart from another store</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="cancel">cancel</string>
    <string name="_0">0</string>
    <string name="view_cart">VIEW CART</string>
    <string name="total_items">%d items</string>
    <string name="total_amount">%d MRU</string>
    <string name="currency"> MRU</string>
    <string name="bill_details">Bill Details</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="items_total">Items Total</string>
    <string name="to_pay">To Pay</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="add_address">Add Address</string>
    <string name="log_in_with_phone_number">Log in with phone number</string>
    <string name="do_you_have_any_special_instructions">Do you have any special instructions?</string>
    <string name="permission_denied_explanation">
        You need to grant location permission in order to live-track this order.
    </string>
    <string name="phone_permission_denied_explanation">
        You need to grant phone call permission in order to call the delivery agent.
    </string>
    <string name="location_required_error">Location services must be enabled for this app.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="confirm_location">CONFIRM LOCATION</string>
    <string name="enter_address_info">Enter Address Info</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="place_order">Place Order</string>
    <string name="we_re_placing_your_order">We\'re placing your order!</string>
    <string name="yay_order_placed">Yay! Order Placed</string>
    <string name="your_order_will_be_delivered_shortly">Your order will be delivered shortly!</string>
    <string name="reorder">Reorder</string>
    <string name="add">add</string>
    <string name="track_order">Track Order</string>
    <string name="help">Help</string>
    <string name="log_out">LOGOUT</string>
    <string name="mru">MRU</string>
    <string name="items">Items</string>
    <string name="search_shops">Search Shops</string>
    <string name="search_shops_of_any_category">Search shops of any category…</string>
    <string name="search_items_of_this_shop">Search items of this shop…</string>
    <string name="rate_order">Rate Order</string>
    <string name="place_an_order_your_cart_looks_empty">Place an order, Your cart looks empty.</string>
    <string name="your_order_is_delivered">Your order is delivered.</string>
    <string name="rate_delivery_experience">Rate delivery experience</string>
    <string name="rate_shop_experience">Rate shop experience</string>
    <string name="please_rate_both_delivery_and_shop">Please rate both the delivery and shop experiences</string>
    <string name="submitting_your_feedback">Submitting your feedback…</string>
    <string name="thank_you">Thank You :)</string>
    <string name="your_stored_addresses_will_appear_here">Your stored addresses will appear here</string>
    <string name="your_favorite_shops_will_appear_here">Your favorite shops will appear here</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_address">Update address</string>
    <string name="delete_Address">Delete Address</string>
    <string name="yes">yes</string>
    <string name="are_you_sure_you_want_to_delete_this_address">Are you want to delete this address?</string>
    <string name="my_account">My Account</string>
    <string name="address_favorites_referrals_and_offers_faqs">Address, Favorites, Referrals and Offers, FAQs</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="favorites">Favorites</string>
    <string name="orders">ORDERS</string>
    <string name="rating">rating</string>
    <string name="ratings">ratings</string>
    <string name="no_ratings">No ratings</string>
    <string name="order_received">Order Received</string>
    <string name="waiting_to_confirm_your_order_from_the_shop">Waiting to confirm your order from the shop</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="delivery_agent_will_be_assigned_to_your_order">Delivery agent will be assigned to your order</string>
    <string name="delivery_agent_assigned">Delivery agent assigned</string>
    <string name="delivery_agent_is_on_the_way_to_the_shop">Delivery agent is on the way to the shop</string>
    <string name="order_picked_up">Order Picked up</string>
    <string name="your_order_has_been_picked_up_and_will_be_delivered_to_you_soon">Your order has been picked up and will be delivered to you soon</string>
    <string name="delivery_agent_has_reached_the_shop">Delivery Agent has reached the shop and will collect the order soon</string>
    <string name="shop_reached">Shop Reached</string>

</resources>
