<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:text="@string/bill_details"
        style="@style/text_on_white_background" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/text_on_white_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/items_total"
            android:textSize="14sp"
            android:gravity="start"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/items_total"
            style="@style/text_on_white_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="end"
            tools:text="0 MRU" />

    </FrameLayout>


    <TableRow
        android:id="@+id/hr3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#E2E1E1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="start"
            android:text="@string/delivery_fee"
            style="@style/text_on_white_background" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="end"
            android:id="@+id/delivery_fee"
            tools:text="0 MRU"
            style="@style/text_on_white_background" />

    </FrameLayout>



    <TableRow
        android:id="@+id/hr4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#E2E1E1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/to_pay"
            style="@style/text_on_white_background" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="end"
            android:textStyle="bold"
            android:id="@+id/to_pay"
            tools:text="0 MRU"
            style="@style/text_on_white_background" />

    </FrameLayout>

</LinearLayout>