<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="7dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/order_container"
        app:cardElevation="5dp"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:id="@+id/order_shop_name"
            android:fontFamily="@font/asap"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            tools:text="Mauricentre"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:id="@+id/container_order_amount_to_pay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_shop_name"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:id="@+id/order_amount_to_pay"
                android:fontFamily="@font/asap"
                android:textSize="14sp"
                android:gravity="start|center"
                tools:text="60"
                android:layout_height="match_parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:fontFamily="@font/asap"
                android:textSize="14sp"
                android:gravity="start|center"
                android:layout_marginStart="6dp"
                android:text="@string/mru"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:id="@+id/container_order_total_items_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_order_amount_to_pay"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:id="@+id/order_total_items_conunt"
                android:fontFamily="@font/asap"
                android:textSize="14sp"
                android:gravity="start|center"
                tools:text="6"
                android:layout_height="match_parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:fontFamily="@font/asap"
                android:textSize="14sp"
                android:gravity="start|center"
                android:layout_marginStart="6dp"
                android:text="@string/items"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:id="@+id/order_date"
            tools:text="20/01/2020 16:11"
            android:fontFamily="@font/asap"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_order_total_items_count"
            android:gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"/>

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/buttons_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_date">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reorder_container"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="6dp"
                android:id="@+id/order_reorder"
                android:text="@string/reorder"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:id="@+id/rate_order"
                android:text="@string/rate_order"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>


    </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>